--- a/app/views/layouts/base.rhtml
+++ b/app/views/layouts/base.rhtml
@@ -40,14 +40,14 @@
                 <%= link_to l(:label_search), {:controller => 'search', :action => 'index', :id => @project}, :accesskey => accesskey(:search) %>:
                 <%= text_field_tag 'q', @question, :size => 20, :class => 'small', :accesskey => accesskey(:quick_search) %>
             <% end %>
-            <% if render_project_hierarchy_implemented == true %>
+            <% if render_project_hierarchy_implemented %>
                 <%= render_project_jump_box if (Setting.plugin_redmine_collapse['hide_project_selector'] == '0') %>
             <% else %>
                 <%= render :partial => 'layouts/project_selector' if User.current.memberships.any? && (Setting.plugin_redmine_collapse['hide_project_selector'] == '0') %>
             <% end %>
         </div>
         
-        <% if page_header_title_implemented == true %>
+        <% if page_header_title_implemented %>
             <h1><%= page_header_title %></h1>
         <% else %>
             <h1><%= h(@project && !@project.new_record? ? @project.name : Setting.app_title) %></h1>
@@ -94,7 +94,7 @@
       </div>
         
         <div id="content">
-            <% if render_flash_messages_implemented == true %>
+            <% if render_flash_messages_implemented %>
                 <%= render_flash_messages %>
             <% else %>
                 <%= content_tag('div', flash[:error], :class => 'flash error') if flash[:error] %>
