Moved the projects tab content into a single div.
git-svn-id: svn://evil-dev.net:3690/redmine-collapse/sandbox/030509_2253-EdavisRubyism@134 1809a232-8a5f-0410-be6b-a332444e9cb2

--- a/app/views/left_menu/_projects.rhtml
+++ b/app/views/left_menu/_projects.rhtml
@@ -1,16 +1,12 @@
 <h3><%= l(:label_projects_tab) %></h3>
 
-<% if render_project_hierarchy_implemented == true %>
+<% if render_project_hierarchy_implemented %>
     <% user_projects = User.current.projects.find(:all) %>
-<% else %>
-    <% user_projects_by_root = User.current.projects.find(:all, :include => :parent).group_by(&:root) %>
-<% end %>
-
-<% if render_project_hierarchy_implemented == true %>
     <div id="projects-nested">
         <%= render_projects_nestedset(user_projects) %>
     </div>
 <% else %>
+    <% user_projects_by_root = User.current.projects.find(:all, :include => :parent).group_by(&:root) %>
     <div id="projects-tree">
         <%= render_projects_tree(user_projects_by_root) %>
     </div>
